    - Revised flib migration module importing, additional functions `is_version_or_older`, `is_version`, and `is_version_or_newer` added at `reskins.lib.migration`
    - Revised 16x16 pixel tier label mipmaps to improve clarity for distinguishing tiers
    - Moved oil refinery icon updates to data-updates from data-final-fixes when using Angel's Petrochem Processing higher than version 0.9.19
  Locale:
    - Removed default text from string mod setting descriptions for ease of translation and reduction of reduplication of translation effort; defaults are now appended automatically
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 2021-07-01
  Features:
    - Added function `return_technology_effect_icon`, which returns an IconData layer containing technology constant icons of the specified type at the specified scale and default positioning
  Changes:
    - Updated logistics technologies to latest sprites from base Factorio
    - Revised tier 5 default color, reducing the brightness and saturation slightly to improve color mask results across a variety of entities
    - Dropped support for ShinyBobGFX, ShinyAngelGFX
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2021-05-02
  Features:
    - Added function `create_icon_variations`
  Changes:
    - Removed function `ore_icon_variations`
    - Adjusted function `construct_icon` and `construct_technology_icon` to allow direct specification of base layer for multi-layer icons
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2021-03-22
  Bugfixes:
    - Fixed that nuclear reactor working lights were not properly overridden
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2021-03-13
  Locale: