@@ -1,2 +1,8 @@
+-- Copyright (c) 2021 Kirazy
+-- Part of Artisanal Reskins: Library
+--
+-- See LICENSE.md in the project directory for license information.
+
 -- Perform on_init routines for existing saves
-on_init()
+local functions = require("__reskins-library__.prototypes.functions.control-functions")
+functions.on_init()
